chore: remove unnecessary jvm options and add xms and xmx options